Controls: Prevent timeline touch when not visible: Switch from CSS to JS It could happen when you played a video and then tapped in the place where the timeline shows on mobile tap

--- a/skin/sass/state.sass
+++ b/skin/sass/state.sass
@@ -113,9 +113,6 @@
       &.is-live-position
         .fp-duration
           color: #00abcd
-  &.is-mouseout:not(.is-splash):not(.is-seeking):not(.fixed-controls):not(.is-mobile-seeking)
-    .fp-timeline
-      pointer-events: none
   &.is-tiny:not(.is-fullscreen)
     font-size: .7em
   &.is-small:not(.is-fullscreen)
